--- a/Source/SizeOnDisk/Windows/ErrorList.xaml
+++ b/Source/SizeOnDisk/Windows/ErrorList.xaml
@@ -43,8 +43,8 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Padding="4,0" Margin="0" Text="{Binding ShortText}" ToolTip="{Binding ShortText}" MouseLeftButtonDown="Exception_MouseLeftButtonDown" />
                                 <Button Content="..." Grid.Column="1" HorizontalAlignment="Right" Click="ExceptionButton_Click"
-                                        Height="17"
-                                        Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}" 
+                                        Height="19"
+                                        Width="19" 
                                         VerticalAlignment="Center"  />
                             </Grid>
                         </DataTemplate>
