--- a/Source/SizeOnDisk/Windows/MainWindow.xaml
+++ b/Source/SizeOnDisk/Windows/MainWindow.xaml
@@ -110,8 +110,12 @@
                 <TextBlock Grid.Row="3" Text="{lex:Loc HardDriveFree}" />
                 <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveFree,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
 
-                <TextBlock Grid.Row="5" Text="Threads" />
-                <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding RunningThreads, Mode=OneWay}" />
+                <TextBlock Grid.Row="5" Text="Status" />
+                <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedRootFolder.ExecutionState, Converter={StaticResource IsRunningConverter}, FallbackValue=..., Mode=OneWay}" />
+                <TextBlock Grid.Row="6" Text="Running time" />
+                <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedRootFolder.RunTime, Mode=OneWay}" />
+                <TextBlock Grid.Row="7" Text="Threads" />
+                <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding RunningThreads, Mode=OneWay}" />
 
                 <TextBox Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.Path, Mode=OneWay}" />
                 <TextBlock Grid.Row="1" Grid.Column="2" Text="Total file size" />
@@ -119,15 +123,15 @@
                 <TextBlock Grid.Row="2" Grid.Column="2" Text="Total disk size" />
                 <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding SelectedRootFolder.DiskSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="3" Grid.Column="2" Text="Total number of folders" />
-                <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding SelectedRootFolder.FolderTotal, Mode=OneWay}" />
+                <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding SelectedRootFolder.FolderTotal, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="4" Grid.Column="2" Text="Total number of files" />
-                <TextBox Grid.Row="4" Grid.Column="3" Text="{Binding SelectedRootFolder.FileTotal, Mode=OneWay}" />
+                <TextBox Grid.Row="4" Grid.Column="3" Text="{Binding SelectedRootFolder.FileTotal, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="5" Grid.Column="2" Text="Number of folders" />
-                <TextBox Grid.Row="5" Grid.Column="3" Text="{Binding SelectedRootFolder.Folders.Count, Mode=OneWay}" />
+                <TextBox Grid.Row="5" Grid.Column="3" Text="{Binding SelectedRootFolder.Folders.Count, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="6" Grid.Column="2" Text="Number of files" />
-                <TextBox Grid.Row="6" Grid.Column="3" Text="{Binding SelectedRootFolder.FileCount, Mode=OneWay}" />
+                <TextBox Grid.Row="6" Grid.Column="3" Text="{Binding SelectedRootFolder.FileCount, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="7" Grid.Column="2" Text="Number of items" />
-                <TextBox Grid.Row="7" Grid.Column="3" Text="{Binding SelectedRootFolder.Childs.Count, Mode=OneWay}" />
+                <TextBox Grid.Row="7" Grid.Column="3" Text="{Binding SelectedRootFolder.Childs.Count, StringFormat=N0, Mode=OneWay}" />
 
                 <TextBox Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.SelectedTreeItem.Path, Mode=OneWay}" />
                 <TextBlock Grid.Row="1" Grid.Column="4" Text="Total file size" />
@@ -135,15 +139,15 @@
                 <TextBlock Grid.Row="2" Grid.Column="4" Text="Total disk size" />
                 <TextBox Grid.Row="2" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="3" Grid.Column="4" Text="Total number of folders" />
-                <TextBox Grid.Row="3" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FolderTotal, Mode=OneWay}" />
+                <TextBox Grid.Row="3" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FolderTotal, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="4" Grid.Column="4" Text="Total number of files" />
-                <TextBox Grid.Row="4" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileTotal, Mode=OneWay}" />
+                <TextBox Grid.Row="4" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileTotal, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="5" Grid.Column="4" Text="Number of folders" />
-                <TextBox Grid.Row="5" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Folders.Count, Mode=OneWay}" />
+                <TextBox Grid.Row="5" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Folders.Count, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="6" Grid.Column="4" Text="Number of files" />
-                <TextBox Grid.Row="6" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileCount, Mode=OneWay}" />
+                <TextBox Grid.Row="6" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileCount, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="7" Grid.Column="4" Text="Number of items" />
-                <TextBox Grid.Row="7" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Childs.Count, Mode=OneWay}" />
+                <TextBox Grid.Row="7" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Childs.Count, StringFormat=N0, Mode=OneWay}" />
             </Grid>
         </Expander>
         <StatusBar DockPanel.Dock="Bottom"
@@ -203,8 +207,6 @@
                            Content="{Binding SelectedRootFolder.SelectedTreeItem.FileCount}"
                            ContentStringFormat="N0"
                            ToolTip="{lex:Loc TotalFiles}" />
-
-
             <Separator Grid.Column="9" />
             <StatusBarItem Grid.Column="10"
                            Content="{Binding SelectedRootFolder.SelectedTreeItem.FolderTotal}"
